exemplos/simul-shop/templates/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: financial
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled
