exemplos/simul-shop/templates/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-v1
spec:
  selector:
    matchLabels:
      app: front-end
      version: v1
  template:
    metadata:
      labels:
        app: front-end
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: front-end
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  selector:
    matchLabels:
      app: login
      version: v1
  template:
    metadata:
      labels:
        app: login
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: login
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
spec:
  selector:
    matchLabels:
      app: catalogue
      version: v1
  template:
    metadata:
      labels:
        app: catalogue
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: catalogue
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  selector:
    matchLabels:
      app: orders
      version: v1
  template:
    metadata:
      labels:
        app: orders
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: orders
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
spec:
  selector:
    matchLabels:
      app: orders-db
      version: v1
  template:
    metadata:
      labels:
        app: orders-db
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: orders-db
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
spec:
  selector:
    matchLabels:
      app: shipping
      version: v1
  template:
    metadata:
      labels:
        app: shipping
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: shipping
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  selector:
    matchLabels:
      app: queue
      version: v1
  template:
    metadata:
      labels:
        app: queue
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: queue
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
spec:
  selector:
    matchLabels:
      app: cart
      version: v1
  template:
    metadata:
      labels:
        app: cart
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: cart
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-db
spec:
  selector:
    matchLabels:
      app: cart-db
      version: v1
  template:
    metadata:
      labels:
        app: cart-db
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: cart-db
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  selector:
    matchLabels:
      app: payment
      version: v1
  template:
    metadata:
      labels:
        app: payment
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: payment
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts
spec:
  selector:
    matchLabels:
      app: accounts
      version: v1
  template:
    metadata:
      labels:
        app: accounts
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: accounts
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-db
spec:
  selector:
    matchLabels:
      app: accounts-db
      version: v1
  template:
    metadata:
      labels:
        app: accounts-db
        version: v1
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: accounts-db
        image: kdop/generic-service:0.0.3
        ports:
        - containerPort: 8080
