exemplos/simul-shop/templates/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  type: ClusterIP
  selector:
    app: front-end
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: login
  labels:
    app: login
spec:
  type: ClusterIP
  selector:
    app: login
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  type: ClusterIP
  selector:
    app: catalogue
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: accounts
  labels:
    app: accounts
spec:
  type: ClusterIP
  selector:
    app: accounts
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-db
  labels:
    app: accounts-db
spec:
  type: ClusterIP
  selector:
    app: accounts-db
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cart-db
  labels:
    app: cart-db
spec:
  type: ClusterIP
  selector:
    app: cart-db
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    app: orders-db
spec:
  type: ClusterIP
  selector:
    app: orders-db
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  type: ClusterIP
  selector:
    app: shipping
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    app: queue
spec:
  type: ClusterIP
  selector:
    app: queue
  ports:
  - name: http
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - name: http
    port: 8000
    targetPort: 8000
