exemplos/simul-shop/templates/virtualservice.yaml

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: front-end
spec:
  hosts:
  - www.simul-shop.com # <--- FQDN completo ou abreviado
  gateways:
  - default-gateway # <--- O nome do gateway que será configurado  
  http:
  - match:
    - uri:
        prefix: "/login"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: login # FQDN completo ou abreviado
        subset: v1
  - match:
        prefix: "/catalogue"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: catalogue # FQDN completo ou abreviado
        subset: v1
  - route: # <-- rota padrão
    - destination:
        host: front-end 
        subset: v1
